GiHub Link and photo

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
 <div class= "contianer fluid">
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
-        <a class="navbar-brand" href="#">GitHub</a>
+        <a class="navbar-brand" href="https://github.com/">GitHub</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
@@ -30,7 +30,7 @@
                 Dropdown
               </a>
               <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                <a class="dropdown-item" href="DSC07086.jpg">photo</a>
+                <a class="dropdown-item" href="DSC07086.JPG">photo</a>
                 <a class="dropdown-item" href="http://www.ibm.com">IBM</a>
                 <a class="dropdown-item" href="folder/Cerulean8.html">Cerulean 8</a>
                 <div class="dropdown-divider"></div>
