change to small cap jpg

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                 Dropdown
               </a>
               <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                <a class="dropdown-item" href="DSC07086.JPG">photo</a>
+                <a class="dropdown-item" href="DSC07086.jpg">photo</a>
                 <a class="dropdown-item" href="http://www.ibm.com">IBM</a>
                 <a class="dropdown-item" href="folder/Cerulean8.html">Cerulean 8</a>
                 <div class="dropdown-divider"></div>
